# named-template-parameters

./: .gitignore  CMakeLists.txt  main.cpp  run_clang_format.sh
examples/: CMakeLists.txt  main.cpp
include/labels/: templates.hpp  traits.hpp
include/template/: optional.hpp  parameters.hpp  required.hpp  traits.hpp  type.hpp
include/template/arguments/: extract.hpp  optional.hpp  required.hpp  traits.hpp
